--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Unit 10 Project
+ <!-- Unit 10 Project
 Requirements
 [  ] Loop #1 - While Loop
 [  ] Loop #2 - For Loop
@@ -29,7 +29,7 @@ Select ONE Additional
       <div>
         <h2 id="start">The Muse</h2>
         <img
-          class="pic" src="https://i.natgeofe.com/n/5fdfbda3-0ccf-4df1-8ec1-fe8a521e6337/Notre-Dame_west-facade.jpg?w=2560&h=3496"
+          class="pic" src="https://i.pinimg.com/736x/c8/8a/18/c88a18da72e95d54a23e00525bb71338.jpg"
         />
       </div>
       <div>
